--- a/common/css/themes/system/theme.css
+++ b/common/css/themes/system/theme.css
@@ -1,67 +1,67 @@
 /*
-  Theme: Dark
-  Updated 04.11.2023 16:49
+  Theme: System
+  Updated 01.11.2023 21:32
 */
 :root {
-  --obs-main-color:                     #d2d2d2;
-  --obs-main-alt-color:                 #d2d2d2;
-  --obs-placeholder-color:              #b9b9b9;
+  --obs-main-color:                     #000000;
+  --obs-main-alt-color:                 #000000;
+  --obs-placeholder-color:              #d2d2d2;
   --obs-disable-color:                  #828282;
-  --obs-element-radius:                 0.2em;
-  --obs-panel-main:                     none;
-  --obs-panel-alt-main:                 #3a393a;
-  --obs-panel:                          #3a393a;
-  --obs-panel-border:                   #1f1e1f;;
-  --obs-panel-border-width:             1px;
+  --obs-element-radius:                 0px;
+  --obs-panel-main:                     #f0f0f0;
+  --obs-panel-alt-main:                 #f0f0f0;
+  --obs-panel:                          #f0f0f0;
+  --obs-panel-border:                   #d9d9d9;
+  --obs-panel-border-width:             0.5px;
   --obs-panel-font:                     normal 12px -apple-system, BlinkMacSystemFont, 'Open Sans', '.AppleSystemUIFont', Helvetica, Arial, 'MS Shell Dlg', sans-serif;
-  --obs-background:                     #3a393a;
-  --obs-background-alt:                 #3a393a;
-  --obs-button-background:              #4c4c4c;
-  --obs-button-alt-background:          #7a797a;
-  --obs-button-active-background:       #1f1e1f;
-  --obs-button-hover-background:        #7a797a;
-  --obs-button-hover-border:            #7a797a;
-  --obs-button-border:                  #4c4c4c;
-  --obs-button-color:                   #fff;
-  --obs-button-alt-color:               #fff;
-  --obs-button-color-disable:           #5c5959;
-  --obs-switch-active-background:       #2196F3;
-  --obs-tooltip-color:                  #3c404b;
-  --obs-select-background:              #1f1e1f;
-  --obs-select-hover-background:        #1f1e1f;
-  --obs-select-focus-background:        #1f1e1f;
-  --obs-field-color:                    #fff;
-  --obs-field-background:               #1f1e1f;
-  --obs-field-disable-background:       #4c4c4c;
-  --obs-field-focus-border:             #3a393a;
-  --obs-field-hover-border:             #3a393a;
-  --obs-field-border:                   #3a393a;
-  --obs-scrollbar:                      #4c4c4c;
-  --obs-scrollbar-thickness:            10px;
-  --obs-scrollbar-radius:               16px;
-  --obs-tab-background:                 #4c4c4c;
-  --obs-tab-hover-background:           #7a797a;
-  --obs-tab-active-hover-background:    #7a797a;
-  --obs-tab-active-background:          #1f1e1f;
-  --obs-tab-border:                     none;
-  --obs-tab-hover-border:               #7a797a;
+  --obs-background:                     #f0f0f0;
+  --obs-background-alt:                 #ffffff;
+  --obs-button-background:              #e1e1e1;
+  --obs-button-alt-background:          #d8eaf9;
+  --obs-button-active-background:       #3c404b;
+  --obs-button-hover-background:        #d8eaf9;
+  --obs-button-hover-border:            #0c7ed8;
+  --obs-button-border:                  #233166;
+  --obs-button-color:                   #0f0f0f; 
+  --obs-button-alt-color:               #4e4b4b;
+  --obs-button-color-disable:           #5c5959; 
+  --obs-switch-active-background:       #23405f;
+  --obs-tooltip-color:                  #28282a;
+  --obs-select-background:              #e1e1e1;
+  --obs-select-hover-background:        #d8eaf9;
+  --obs-select-focus-background:        #d8eaf9;
+  --obs-field-color:                    #0f0f0f;
+  --obs-field-background:               #ffffff;
+  --obs-field-disable-background:       #e2e6e9;
+  --obs-field-focus-border:             #284cb8;
+  --obs-field-hover-border:             #0c7ed8;
+  --obs-field-border:                   #7a7a7a;
+  --obs-scrollbar:                      #28282a;
+  --obs-scrollbar-thickness:            7px;
+  --obs-scrollbar-radius:               0px;
+  --obs-tab-background:                 #f0f0f0;
+  --obs-tab-hover-background:           #d8eaf9;
+  --obs-tab-active-hover-background:    #d8eaf9;
+  --obs-tab-active-background:          #fff;
+  --obs-tab-border:                     #d9d9d9;
+  --obs-tab-hover-border:               #d9d9d9;
   --obs-tab-active-border:              none;
-  --obs-tab-active-hover-border:        #7a797a;
-  --obs-tab-separator-thickness:        3px;
-  --obs-tab-appearance-margin-top:      3px;
-  --obs-tabs-separator-thickness:       1px;
-  --obs-tabs-separator-padding-bottom:  1px;
-  --obs-tabs-separator:                 #1f1e1f;
-  --obs-checkbox-border:                #3a393a;
-  --obs-checkbox-hover-border:          #fff;
-  --obs-checkbox-background:            #fff;
-  --obs-checkbox-color:                 #1f1e1f;
+  --obs-tab-active-hover-border:        none;
+  --obs-tab-separator-thickness:        0px;
+  --obs-tab-appearance-margin-top:      0px;
+  --obs-tabs-separator-thickness:       2px;
+  --obs-tabs-separator-padding-bottom:  0px;
+  --obs-tabs-separator:                 #ffffff;
+  --obs-checkbox-border:                #a0a0a4;
+  --obs-checkbox-hover-border:          #0c7ed8;
+  --obs-checkbox-background:            #ffffff;
+  --obs-checkbox-color:                 #000000;
   --obs-main-active-shadow:             #0095ff;
   --obs-main-inactive-shadow:           #ff0d0d;
-  --obs-main-disabled-shadow:           rgb(0 0 0 / 20%);
+  --obs-main-disabled-shadow:           none;
   --obs-panel-active-shadow:            #0095ff;
   --obs-panel-inactive-shadow:          #ff0d0d;
-  --obs-panel-disabled-shadow:          rgb(0 0 0 / 20%);
+  --obs-panel-disabled-shadow:          none;
   --obs-main-box-shadow:                none;
   --obs-panel-box-shadow:               none;
   --obs-panel-inactive-box-shadow:      none;
@@ -108,6 +108,7 @@ input + .slider::after {
   margin: 0;
   font-weight: normal;
   font: var(--obs-panel-font);
+  color: var(--obs-checkbox-color);
   width: 1.15em;
   height: 1.15em;
   border: 0.5px solid var(--obs-checkbox-border);
@@ -202,7 +203,9 @@ input:checked + .icon-btn:hover {
   border-style: solid;
   border-color: var(--obs-panel-border);
 }
-[id$=-config-content] > div,
+[id$=-config-content] > div {
+  box-shadow: inset 0px 0px 5px 0px var(--obs-panel-box-shadow);
+}
 div[id^="alt-"][id$=-config-content] > div {
   border: var(--obs-panel-border);
   padding: 5px;
@@ -255,7 +258,7 @@ div[id^="alt-"][id$=-config-content] > div {
 .panel select {
   color: var(--obs-main-color);
 	background: var(--obs-select-background);
-  border: 0.5px solid var(--obs-field-border);
+  border: 0.5px solid var(--obs-field-border);    
   padding: 1px 1px 1px 5px;
 }
 .panel input {
@@ -280,7 +283,7 @@ div[id^="alt-"][id$=-config-content] > div {
 #global-configuration #theme-options #theme:focus {
   color: var(--obs-main-color);
   background-color: var(--obs-select-focus-background);
-  border: 0.5px solid var(--obs-field-focus-border);
+  border: 0.5px solid var(--obs-field-hover-border);
 }
 .number-input input[type="number"]:disabled, .number-input button:disabled,
 .panel input:disabled {
@@ -338,7 +341,7 @@ div[id^="alt-"][id$=-config-content] > div {
 
 /* LT Inactive */
 #sortable > div[id^="alt-"].sortees > div[id^="alt-"][id$=-config-content] > div {
-  box-shadow: none;
+  box-shadow: inset 0px 0px 5px 0px var(--obs-panel-box-shadow);
   padding: 5px;
   margin-bottom: 15px;
   border-radius: 3px;
@@ -347,14 +350,14 @@ div[id^="alt-"][id$=-config-content] > div {
 
 /* LT Disabled */
 #sortable > div[id^="alt-"].sortees > div[id^="alt-"][id$=-config-content] > div.inactive {
-  box-shadow: 0px 0px 2px 0px rgb(255,231,231),
+  box-shadow: 0px 0px 2px 0px var(--obs-panel-inactive-box-shadow),
             0px 0px 12px 0px var(--obs-panel-inactive-shadow);
   border-radius: 3px;
 }
 
 /* LT Active */
 #sortable > div[id^="alt-"].sortees > div[id^="alt-"][id$=-config-content] > div.active {
-  box-shadow: 0px 0px 2px 0px rgb(222, 240, 255),
+  box-shadow: 0px 0px 2px 0px var(--obs-panel-active-box-shadow),
             0px 0px 12px 0px var(--obs-panel-active-shadow);
   border-radius: 3px;
 }
@@ -376,6 +379,15 @@ div[id^="alt-"][id$=-config-content] > div {
   box-shadow: 0px 0px 2px 0px rgb(222, 240, 255),
             0px 0px 12px 0px var(--obs-panel-active-shadow);
   border-radius: 3px;
+}
+.tablinks:last-child {
+  border-right: 0 !important; 
+}
+.tablinks:first-child {
+  border-left: 0 !important; 
+}
+.tablinks:not(:last-child) {
+  border-right: 0 !important;
 }
 #main-title, .alt-number-icon, .renameable {
   color: var(--obs-main-alt-color);
